# summit_mpi_test

./: CMakeLists.txt  README.md  env  main.cu
